- 0003714: [upgrade] Please add in a way to transfer attachments from the database to disk (thraxisp)
- 0004078: [upgrade] Script to import the value of a custom field to a native field (thraxisp) 
- 0003483: [upgrade] some admin users permissions not completly upgraded from 0.17.5 to 0.18.0 (thraxisp)
- 0003877: [email] Upgrade to PHPMailer 1.72 (vboctor)
- 0004147: [email] Receiving emails in foreign languages (thraxisp)
- 0004107: [email] email w/o recipient sent (thraxisp)
- 0002220: [installation] usage of consistent naming schema for images (vboctor)
- 0003307: [installation] check.php always checks mail() rather than the config (thraxisp)
- 0004163: [other] Unreadable error messages in some languages (vboctor)
- 0003904: [sql] cache missing 'user pref' rows (thraxisp)
- 0004222: [sql] Should mantis_project_category_table.user_id be UNSIGNED? (vboctor)
- New Config: main_menu_custom_options (default empty) - Allow addition of custom menu options to main menu (vboctor)
- New Config: show_realname (default OFF) - show realname in all places instead of username (thraxisp)
- New Config: max_failed_login_count -	Max. attempts to login using a wrong password before lock the account.
- New Config:	notify_new_user_created_threshold_min - access level required to be notified when a new user has been created
- New Config:	password_confirm_hash_magic_string - String used to generate the confirm_hash for the 'lost password' feature
- New Config:	signup_use_captcha	- use image to validate subscription
- New Config:	system_font_folder	- absolute path  to folder which contains your TrueType-Font files
- New Config:	font_per_captcha	- font name used to create the captcha image
- New Config:	lost_password_feature - enable lost password feature
- New Config:	max_lost_password_in_progress_count - Max. simultaneous requests of 'lost password'
- Removed config option (to_mail): no longer required
- Removed config option (use_bcc): no longer required